--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
-
 <html>
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title></title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="styles.css">
-   </head>
-   <body>
-      <header>
-         <h1>Tokyo</h1>
-      </header>
-      <div class="clip-container">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-cross">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-cross">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-cross">
-      </div>
-      <div class="clip-container">
-         <img src="images/image1.jpg" alt="Picture of streets" class="clip-parallelogram">
-         <img src="images/image1.jpg" alt="Picture of streets" class="clip-parallelogram"> 
-         <img src="images/image1.jpg" alt="Picture of streets" class="clip-parallelogram">       
-      </div>
-      <div class="clip-container">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-arrow">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-arrow">
-         <img src="images/image2.jpg" alt="Picture of Amsterdam canals" class="clip-arrow">
-      </div>
-   </body>
+<head>
+	<meta charset="utf-8" />
+	<title>A template for a responsive restaurant menu</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+   <main>
+      <section>
+         <span></span>
+      </section>
+   </main>
+</body>
 </html>
