create: card component

--- a/index.html
+++ b/index.html
@@ -7,9 +7,45 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+   <header>
+      <h1>ラーメン屋</h1>
+   </header>
+
    <main>
+
       <section>
          <span></span>
+      </section>
+
+      <section>
+         <article>
+            <section>
+               <h2>ラーメン</h2>
+            </section>
+            <table>
+               <tr>
+                  <td>1.</td>
+                  <td>とんこつラーメン</td>
+                  <td>Hakata ramen from the hakata region</td>
+               </tr>
+               <tr>
+                  <td>2.</td>
+                  <td>チキンラーメン</td>
+                  <td>A chicken bone broth based ramen</td>
+               </tr>
+               <tr>
+                  <td>3.</td>
+                  <td>からかメン</td>
+                  <td>A soy based ramen</td>
+               </tr>
+               <tr>
+                  <td>4.</td>
+                  <td>とんこつラーメン</td>
+                  <td>A spicy pork bone broth based ramen</td>
+               </tr>
+            </table>
+         </article>
       </section>
    </main>
 </body>
