create and style menu

--- a/index.html
+++ b/index.html
@@ -5,17 +5,122 @@
 	<title>A template for a responsive restaurant menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="styles.css">
+   <link href="/path/to/print.css" media="print" rel="stylesheet" />
 </head>
 <body>
+
    <header>
       <h1>ラーメン屋</h1>
    </header>
+
    <main>
       <section>
          <span></span>
          <span></span>
          <span></span>
       </section>
+
+         <section>
+            <h1>Ramen</h1>
+            <span></span>
+            <article>
+               <h3>Hakata shoyu ramen</h3>
+               <div>14,95</div>
+               <p>Pork based shoyu ramen topped with charsiu, spring onions and bamboo shoots</p>
+            </article>
+            <article>
+               <h3>Hakata shio ramen</h3>
+               <div>12,95</div>
+               <p>Pork based shio ramen topped with charsiu, spring onions and bamboo shoots</p>
+            </article>
+            <article>
+               <h3>Hakata miso ramen</h3>
+               <div>13,95</div>
+               <p>Pork based miso broth ramen topped with charsiu, spring onions and bamboo shoots</p>
+            </article>
+            <article>
+               <h3>Kimchi ramen</h3>
+               <div>12,95</div>
+               <p>Ramen with kimchi in a light chicken broth. Topped with kimchi, half boiled egg and springs onions</p>
+            </article>
+            <article>
+               <h3>Sesame chicken</h3>
+               <div>12,25</div>
+               <p>Creamy chicken borth garnished with chicken charsiu, half boiled egg, mushrooms and spring onions</p>
+            </article>
+         </section>
+   
+         <section>
+            <h1>Toppings</h1>
+            <span></span>
+            <article>
+               <h3>Pork Charsiu</h3>
+               <div>1,50</div>
+               <p>Grass fed, free range roasted pork slices.</p>
+            </article>
+            <article>
+               <h3>Chicken Charsiu</h3>
+               <div>1,50</div>
+               <p>Grass fed, free range roasted chicken slices</p>
+            </article>
+            <article>
+               <h3>Half boiled egg</h3>
+               <div>0,70</div>
+               <p>Half boiled egg marinated in our homemade soy sauce</p>
+            </article>
+            <article>
+               <h3>Spicy bamboo shoots</h3>
+               <div>0,70</div>
+               <p>Bamboo shoots marinated in our homemade chili oil</p>
+            </article>
+            <article>
+               <h3>Chili oil</h3>
+               <div>0,30</div>
+               <p>Our very own homemade chili oil</p>
+            </article>
+         </section>
+   
+         <section>
+            <h1>Sides</h1>
+            <span></span>
+            <article>
+               <h3>Gyoza</h3>
+               <div>2,30</div>
+               <p>Grass fed, free range chicken dumplings (4 pieces)</p>
+            </article>
+            <article>
+               <h3>Chicken kara-age</h3>
+               <div>4,20</div>
+               <p>Fried chicken, ideal beer snack</p>
+            </article>
+            <article>
+               <h3>Ebi Furai</h3>
+               <div>4,20</div>
+               <p>Deep fried prawns, ideal beer snack</p>
+            </article>
+         </section>
+   
+         <section>
+            <h1>Beers</h1>
+            <span></span>
+            <article>
+               <h3>Heineken</h3>
+               <div>2,30</div>
+               <p>Ice cold Dutch Heineken beer</p>
+            </article>
+            <article>
+               <h3>Sapporo Premium beer</h3>
+               <div>3,30</div>
+               <p>Japanese beer, great accompany to kara-age</p>
+            </article>
+            <article>
+               <h3>Sake</h3>
+               <div>3,30</div>
+               <p>Japanese rice wine from the Hakata region</p>
+            </article>
+         </section>
+   
    </main>
+
 </body>
 </html>
