--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
    <main>
       <section>
-         <span></span>
-         <span></span>
-         <span></span>
+         <span alt="Rising sun"></span>
+         <span alt="Mt Fuji"></span>
+         <span alt="Cloud"></span>
       </section>
 
          <section>
             <h1>Ramen</h1>
-            <span></span>
+            <span alt="Noodle strand"></span>
             <article>
                <h3>Hakata shoyu ramen</h3>
                <div>14,95</div>
@@ -52,7 +52,7 @@
    
          <section>
             <h1>Toppings</h1>
-            <span></span>
+            <span alt="Noodle strand"></span>
             <article>
                <h3>Pork Charsiu</h3>
                <div>1,50</div>
@@ -82,7 +82,7 @@
    
          <section>
             <h1>Sides</h1>
-            <span></span>
+            <span alt="Noodle strand"></span>
             <article>
                <h3>Gyoza</h3>
                <div>2,30</div>
@@ -102,7 +102,7 @@
    
          <section>
             <h1>Beers</h1>
-            <span></span>
+            <span alt="Noodle strand"></span>
             <article>
                <h3>Heineken</h3>
                <div>2,30</div>
