feat: add navigation

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
    <link href="/path/to/print.css" media="print" rel="stylesheet" />
 </head>
 <body>
+   <header>
+      <nav>
+         <ul>
+            <li><a href="#ramen">Ramen</a></li>
+            <li><a href="#sides">Sides</a></li>
+            <li><a href="#drinks">Drinks</a></li>
+         </ul>
+      </nav>
+   </header>
    <main>
-      <section>
+      <section id="ramen">
          <header>
             <h2>Ramen</h2>
          </header>
@@ -29,9 +38,9 @@
             <div>&euro; 12,95</div>
          </article>
       </section>
-      <section>
+      <section id="sides">
          <header>
-            <h2>Side dishes</h2>
+            <h2>Sides</h2>
          </header>
          <article>
             <h3>Gyoza</h3>
@@ -40,7 +49,7 @@
          </article>
          <article>
             <h3>Chicken kara-age</h3>
-            <p>Deep Fried chicken, ideal beer snack</p>
+            <p>Deep Fried chicken</p>
             <div>&euro; 4,20</div>
          </article>
          <article>
@@ -49,7 +58,7 @@
             <div>&euro; 4,95</div>
          </article>
       </section>
-      <section>
+      <section id="drinks">
          <header>
             <h2>Drinks</h2>
          </header>
@@ -59,8 +68,8 @@
             <div>&euro; 2,95</div>
          </article>
          <article>
-            <h3>Sapporo Premium beer</h3>
-            <p>Deep Fried chicken, ideal beer snack</p>
+            <h3>Sapporo beer</h3>
+            <p>Japanese beer</p>
             <div>&euro; 4,20</div>
          </article>
          <article>
