feat: create mountain and sun

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
    <link href="/path/to/print.css" media="print" rel="stylesheet" />
 </head>
 <body>
+   <section>
+      <span alt="Rising sun"></span>
+      <span alt="Mt Fuji"></span>
+      <span alt="Cloud"></span>
+   </section>
    <header>
       <nav>
          <ul>
@@ -44,7 +49,7 @@
          </header>
          <article>
             <h3>Gyoza</h3>
-            <p>Dumpling filled with chicken</p>
+            <p>Chicken filled dumpling</p>
             <div>&euro; 4,95</div>
          </article>
          <article>
