--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	<title>A template for a responsive restaurant menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="styles.css">
-   <link href="/path/to/print.css" media="print" rel="stylesheet" />
+   <link rel="stylesheet" type="text/css" href="styles.css" media="screen">
+   <link rel="stylesheet" type="text/css" href="styles.css" media="print">
 </head>
 <body>
    <header>
